added german female cognomen versions
- changed some (male) cognomen

--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -1,4 +1,4 @@
-<!-- German de-DE (© Revan ©) -->
+<!-- German Translation (© Revan ©) -->
 
 <Root>
 	<Entry>
@@ -3551,7 +3551,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_FOUNDER</zType>
-		<de-DE>der Begründer</de-DE>
+		<de-DE>der Gründer</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_WARRIOR</zType>
@@ -3559,11 +3559,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_BRAVE</zType>
-		<de-DE>der Ausbilder</de-DE>
+		<de-DE>der Mutige</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_VALIANT</zType>
-		<de-DE>der Aufmerksame</de-DE>
+		<de-DE>der Tapfere</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_MIGHTY</zType>
@@ -3571,7 +3571,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_VICTORIOUS</zType>
-		<de-DE>er Siegreiche</de-DE>
+		<de-DE>der Siegreiche</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_LION</zType>
@@ -3663,7 +3663,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_FOUNTAINHEAD</zType>
-		<de-DE>der Ursprung</de-DE>
+		<de-DE>die Quelle</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_DEVOUT</zType>
@@ -3747,7 +3747,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_BAD</zType>
-		<de-DE>der Schlechte</de-DE>
+		<de-DE>der Böse</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_COGNOMEN_BLOODY</zType>
